fix: resolve search icon minor misalignment

--- a/style.css
+++ b/style.css
@@ -1193,7 +1193,7 @@ header .icons a:hover{
   }
 
   #search-icon {
-    top: 0px;
+    top: 5px;
   }
 
   .icons-container i {
